crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_wrapper_with_generics_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: parser
---
#[automatically_derived]
impl<'tokens, 'src: 'tokens, T: TypeLattice> ::kirin::parsers::HasDialectParser<'tokens, 'src>
    for WrapperWithGenerics<T>
where
    T: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    GenericInner<T>: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
{
    type Output<__TypeOutput, __LanguageOutput>
        = WrapperWithGenericsAST<'tokens, 'src, T, __TypeOutput, __LanguageOutput>
    where
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens;
    #[inline]
    fn recursive_parser<I, __TypeOutput, __LanguageOutput>(
        language: ::kirin::parsers::RecursiveParser<'tokens, 'src, I, __LanguageOutput>,
    ) -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output<__TypeOutput, __LanguageOutput>>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens,
    {
        use kirin::parsers::chumsky::prelude::*;
        <GenericInner<T> as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::recursive_parser::<
            I,
            __TypeOutput,
            __LanguageOutput,
        >(language.clone())
        .map(
            |inner| -> WrapperWithGenericsAST<'tokens, 'src, T, __TypeOutput, __LanguageOutput> {
                WrapperWithGenericsAST::Inner(inner)
            },
        )
        .boxed()
    }
}
#[automatically_derived]
impl<'tokens, 'src: 'tokens, T: TypeLattice> ::kirin::parsers::HasParser<'tokens, 'src>
    for WrapperWithGenerics<T>
where
    T: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    GenericInner<T>: ::kirin::parsers::HasDialectParser<'tokens, 'src>,
{
    type Output = WrapperWithGenericsASTSelf<
        'tokens,
        'src,
        T,
        <T as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
    {
        use kirin::parsers::chumsky::prelude::*;
        :: kirin :: parsers :: chumsky :: recursive :: recursive (| language | { < WrapperWithGenerics < T > as :: kirin :: parsers :: HasDialectParser < 'tokens , 'src , >> :: recursive_parser :: < I , < T as :: kirin :: parsers :: HasParser < 'tokens , 'src >> :: Output , Self :: Output > (language) . map (| inner | WrapperWithGenericsASTSelf :: new (inner)) }) . boxed ()
    }
}
