crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_cond_branch_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
assertion_line: 251
expression: parser
---
impl<'tokens, 'src: 'tokens, Language> ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>
    for CondBranch
where
    Language: ::kirin::ir::Dialect + 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = CondBranchAST<'tokens, 'src, Language>;
    type TypeAST = <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output;
    #[inline]
    fn recursive_parser<I>(
        language: ::kirin::parsers::RecursiveParser<
            'tokens,
            'src,
            I,
            <Language as ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>>::Output,
        >,
    ) -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
        Language: ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>,
    {
        use kirin::parsers::chumsky::prelude::*;
        let parser: ::kirin::parsers::BoxedParser<
            'tokens,
            'src,
            I,
            CondBranchAST<'tokens, 'src, Language>,
        > = {
            use kirin::parsers::Token;
            ::kirin::parsers::chumsky::prelude::just(Token::Identifier("br"))
                .ignore_then(::kirin::parsers::ssa_value::<_, Language, SimpleType>())
                .then_ignore(::kirin::parsers::chumsky::prelude::just(Token::Comma))
                .then(::kirin::parsers::block_label())
                .then_ignore(::kirin::parsers::chumsky::prelude::just(Token::Comma))
                .then(::kirin::parsers::block_label())
                .map(
                    |((cond, then_target), else_target)| -> CondBranchAST<'tokens, 'src, Language> {
                        CondBranchAST {
                            cond: cond,
                            then_target: then_target,
                            else_target: else_target,
                            _marker: ::core::marker::PhantomData::<
                                fn() -> (&'tokens (), &'src (), Language),
                            >,
                        }
                    },
                )
        }
        .boxed();
        unsafe { ::core::mem::transmute(parser) }
    }
}
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasParser<'tokens, 'src> for CondBranch
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = CondBranchAST<'tokens, 'src, CondBranch>;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
    {
        use kirin::parsers::chumsky::prelude::*;
        :: kirin :: parsers :: chumsky :: recursive :: recursive (| language | { < CondBranch as :: kirin :: parsers :: HasDialectParser < 'tokens , 'src , CondBranch , >> :: recursive_parser (language) }) . boxed ()
    }
}
