crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_generics_emit.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: emit
---
impl<'tokens, 'src: 'tokens, T: TypeLattice, Language: ::kirin::ir::Dialect>
    ::kirin::parsers::EmitIR<Language> for GenericReturnAST<'tokens, 'src, T, Language>
where
    Language: ::kirin::ir::Dialect + From<GenericReturn<T>>,
    T: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <T as ::kirin::parsers::HasParser<'tokens, 'src>>::Output: ::kirin::parsers::EmitIR<
        Language,
        Output = <Language as ::kirin::ir::Dialect>::TypeLattice,
    >,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        let Self(f0) = self;
        let f0_ir: ::kirin::ir::SSAValue = ::kirin::parsers::EmitIR::emit(f0, ctx);
        let dialect_variant: GenericReturn<T> = GenericReturn(f0_ir.into());
        ctx.context.statement().definition(dialect_variant).new()
    }
}
