crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_generics_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: parser
---
impl<'tokens, 'src: 'tokens, T: TypeLattice, Language>
    ::kirin::parsers::HasDialectParser<'tokens, 'src, Language> for GenericReturn<T>
where
    Language: ::kirin::ir::Dialect + 'tokens,
    T: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = GenericReturnAST<'tokens, 'src, T, Language>;
    type TypeAST = <T as ::kirin::parsers::HasParser<'tokens, 'src>>::Output;
    #[inline]
    fn recursive_parser<I>(
        language: ::kirin::parsers::RecursiveParser<
            'tokens,
            'src,
            I,
            <Language as ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>>::Output,
        >,
    ) -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
        Language: ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>,
    {
        use kirin::parsers::chumsky::prelude::*;
        let parser: ::kirin::parsers::BoxedParser<
            'tokens,
            'src,
            I,
            GenericReturnAST<'tokens, 'src, T, Language>,
        > = {
            use kirin::parsers::Token;
            ::kirin::parsers::chumsky::prelude::just(Token::Identifier("return"))
                .ignore_then(::kirin::parsers::ssa_value::<_, Language, T>())
                .map(|field_0| -> GenericReturnAST<'tokens, 'src, T, Language> {
                    GenericReturnAST(field_0, ::core::marker::PhantomData)
                })
        }
        .boxed();
        unsafe { ::core::mem::transmute(parser) }
    }
}
impl<'tokens, 'src: 'tokens, T: TypeLattice> ::kirin::parsers::HasParser<'tokens, 'src>
    for GenericReturn<T>
where
    T: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = GenericReturnAST<'tokens, 'src, T, GenericReturn<T>>;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::recursive::recursive(|language| {
            <GenericReturn<T> as ::kirin::parsers::HasDialectParser<
                'tokens,
                'src,
                GenericReturn<T>,
            >>::recursive_parser(language)
        })
        .boxed()
    }
}
