crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_generics_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
impl<T: TypeLattice> ::kirin::pretty::PrettyPrint<GenericReturn<T>> for GenericReturn<T>
where
    T: ::core::fmt::Display,
{
    fn pretty_print<'a>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, GenericReturn<T>>,
    ) -> ::kirin::pretty::ArenaDoc<'a> {
        use kirin::pretty::DocAllocator;
        let GenericReturn(f0) = self;
        doc.text("return ") + ::kirin::pretty::PrettyPrint::pretty_print(f0, doc)
    }
}
