crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_region_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
pub struct FunctionAST<'tokens, 'src, Language>
where
    Language: ::kirin::ir::Dialect,
{
    pub res: ::kirin::parsers::ResultValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    pub body: ::kirin::parsers::Region<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
        FunctionAST<'tokens, 'src, Language>,
    >,
    #[doc(hidden)]
    _marker: ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), Language)>,
}
