crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_region_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: parser
---
#[automatically_derived]
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasDialectParser<'tokens, 'src> for Function
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output<__TypeOutput, __LanguageOutput>
        = FunctionAST<'tokens, 'src, __TypeOutput, __LanguageOutput>
    where
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens;
    #[inline]
    fn recursive_parser<I, __TypeOutput, __LanguageOutput>(
        language: ::kirin::parsers::RecursiveParser<'tokens, 'src, I, __LanguageOutput>,
    ) -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output<__TypeOutput, __LanguageOutput>>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens,
    {
        use kirin::parsers::chumsky::prelude::*;
        { use :: kirin :: parsers :: Token ; :: kirin :: parsers :: nameof_ssa () . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Equal) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Identifier ("function")))) . then (:: kirin :: parsers :: region :: < _ , SimpleType , _ > (language . clone ())) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Arrow)) . then (:: kirin :: parsers :: typeof_ssa :: < _ , SimpleType > ()) . map (| ((res_name , body) , res_type) | -> FunctionAST < 'tokens , 'src , __TypeOutput , __LanguageOutput > { FunctionAST { body : body , res : :: kirin :: parsers :: ResultValue { name : :: kirin :: parsers :: Spanned { value : res_name . name , span : res_name . span } , ty : Some (res_type . ty . clone ()) , } , _marker : :: core :: marker :: PhantomData :: < fn () -> (& 'tokens () , & 'src () , __TypeOutput , __LanguageOutput) > } }) } . boxed ()
    }
}
#[automatically_derived]
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasParser<'tokens, 'src> for Function
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = FunctionASTSelf<
        'tokens,
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::recursive::recursive(|language| {
            <Function as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::recursive_parser::<
                I,
                <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
                Self::Output,
            >(language)
            .map(|inner| FunctionASTSelf::new(inner))
        })
        .boxed()
    }
}
